[tool.poetry]
name = "social-app"
version = "0.1.0"
description = ""
authors = ["mrtedn21 <bezgin.sasha06@gmail.com>"]
readme = "README.md"
packages = [{include = "social_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
