[tool.poetry]
name = "social-app"
version = "0.1.0"
description = ""
authors = ["mrtedn21 <bezgin.sasha06@gmail.com>"]
readme = "README.md"
packages = [{include = "social_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.11.0"
psycopg2-binary = "^2.9.3"
django-filter = "^22.1"
certifi = "^2022.6.15"
celery = "^5.2.7"
redis = "^4.3.4"
django-cors-headers = "^3.13.0"
django-ckeditor = "^6.5.1"
Pillow = "^9.2.0"
django-imagekit = "^4.1.0"
drf-extra-fields = "^3.4.1"
django-debug-toolbar = "^3.7.0"
eyed3 = "^0.9.7"
transliterate = "^1.10.2"
python-slugify = "^6.1.2"
drf-spectacular = "^0.24.2"
django-s3-storage = "^0.13.10"
channels = "^4.0.0"
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
